fix: links not working on firefox

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -66,6 +66,10 @@ p, span, a, li {
     animation-fill-mode: forwards;
   }
 
+  .cursor-none {
+    cursor: none;
+  }
+
 }
 
 .white {
